ajuste de autorizacion de roles y separacion de publico y privado